force-app/main/default/objects/Custom_Note__c/Custom_Note__c.object-meta.xml
<CustomObject>
    <label>Custom Note</label>
    <nameField>
        <label>Custom Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>