force-app/main/default/objects/Custom_Note__c/fields/Note_Body__c.field-meta.xml
<CustomField>
    <fullName>Note_Body__c</fullName>
    <label>Note Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>